<?xml version='1.0' encoding='utf-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chua</groupId>
        <artifactId>utils-support-parent-starter</artifactId>
        <version>4.0.0.42</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>com.chua</groupId>
    <artifactId>utils-support-filesystem-parent</artifactId>
    <version>4.0.0.42</version>
    <packaging>pom</packaging>
    <name>Utils Support Filesystem Parent</name>
    <description>文件系统父模块，提供系统日志检索等功能</description>
    <modules>
        <module>utils-support-syslog-starter</module>
        <module>utils-support-email-starter</module>
        <module>utils-support-pdf-starter</module>
        <module>utils-support-word-starter</module>
        <module>utils-support-dbf-starter</module>
        <module>utils-support-excel-starter</module>
        <module>utils-support-aspose-starter</module>
        <module>utils-support-libreoffice-starter</module>
        <module>utils-support-onlyoffice-starter</module>
        <module>utils-support-ibd-starter</module>
        <module>utils-support-html-starter</module>
        <module>utils-support-image-starter</module>
        <module>utils-support-image-apng-starter</module>
        <module>utils-support-ofd-starter</module>
        <module>utils-support-zxing-starter</module>
        <module>utils-support-ffmpeg-starter</module>
        <module>utils-support-ffmpeg-javacv-starter</module>
        <module>utils-support-ffmpeg-rust-starter</module>
        <module>utils-support-groovy-starter</module>
        <module>utils-support-qqwry-starter</module>
        <module>utils-support-ip2region-starter</module>
        <module>utils-support-pandoc-starter</module>
        <module>utils-support-json-starter</module>
        <module>utils-support-filesearch-starter</module>
        <module>utils-support-filestorage-starter</module>
        <module>utils-support-geoip2-starter</module>
        <module>utils-support-log-starter</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                    <compilerArgs>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version></version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>